# SchrodingersSandbox

./: .gitignore  CMakeLists.txt  README.md  setup.sh  setup_windows.bat
.github/workflows/: ci.yml
data/scripts/: neb_driver.py  pes_scan_driver.py  pyscf_driver.py  xtb_driver.py
data/shaders/: atom_impostor.frag  atom_impostor.vert  atom_point.frag  atom_point.vert  bond_impostor.frag  bond_impostor.vert  cube_raymarch.frag  deferred_lighting.frag  deferred_lighting.vert  esp_surface.frag  fxaa.frag  gbuffer.frag  gbuffer_atom.vert  gbuffer_bond.frag  gbuffer_bond.vert  mo_raymarch.frag  mo_raymarch.vert  nci_surface.frag  orbital_raymarch.frag  shadow_depth.vert  ssao.frag  ssao_blur.frag  tonemap.frag
resources/: schrodingers-sandbox.xml
scripts/: make_appimage.sh  make_dmg.sh  make_icon.py
src/: cli.cpp  cli.h  main.cpp
src/analysis/: crystal_field.cpp  crystal_field.h  nci.cpp  nci.h  orbital_composition.cpp  orbital_composition.h
src/backend/: backend_manager.cpp  backend_manager.h  job_types.h  python_env.cpp  python_env.h
src/chem/: coordination.cpp  coordination.h  ligand_library.cpp  ligand_library.h
src/core/: basis_set.cpp  basis_set.h  constants.h  covalent_radii.cpp  covalent_radii.h  crash_handler.cpp  crash_handler.h  elements.cpp  elements.h  gaussian_eval.cpp  gaussian_eval.h  hydrogen.cpp  hydrogen.h  logging.cpp  logging.h  molden_parser.cpp  molden_parser.h  molecular_system.cpp  molecular_system.h  paths.cpp  paths.h  settings.cpp  settings.h  slater.cpp  slater.h  special_functions.cpp  special_functions.h  spline.cpp  spline.h  symmetry.cpp  symmetry.h  types.h  update_checker.cpp  update_checker.h  valence.cpp  valence.h  version.h.in  zmatrix.cpp  zmatrix.h
src/editor/: command.cpp  command.h  draw_mode.cpp  draw_mode.h  editor_mode.h  erase_mode.cpp  erase_mode.h  fragment_library.cpp  fragment_library.h  fragment_mode.cpp  fragment_mode.h  measure_mode.cpp  measure_mode.h  picking.cpp  picking.h  select_mode.cpp  select_mode.h
src/io/: cube_io.cpp  cube_io.h  fchk_io.cpp  fchk_io.h  pdb_io.cpp  pdb_io.h  project_io.cpp  project_io.h  sdf_io.cpp  sdf_io.h  trajectory_io.cpp  trajectory_io.h  xyz_io.cpp  xyz_io.h
src/renderer/: basis_texture.cpp  basis_texture.h  camera.cpp  camera.h  esp_surface.cpp  esp_surface.h  gbuffer.cpp  gbuffer.h  lod_renderer.cpp  lod_renderer.h  mol_renderer.cpp  mol_renderer.h  post_process.cpp  post_process.h  screenshot.cpp  screenshot.h  shader.cpp  shader.h  shadow_map.cpp  shadow_map.h  ssao.cpp  ssao.h  video_export.cpp  video_export.h  volume_texture.cpp  volume_texture.h  window.cpp  window.h
src/ui/: about_dialog.cpp  about_dialog.h  annotation_editor.cpp  annotation_editor.h  annotations.cpp  annotations.h  app.cpp  app.h  app_state.h  bond_order_panel.cpp  bond_order_panel.h  charge_overlay.cpp  charge_overlay.h  complex_builder.cpp  complex_builder.h  computation_panel.cpp  computation_panel.h  constraint_editor.cpp  constraint_editor.h  context_menu.cpp  context_menu.h  crystal_field_panel.cpp  crystal_field_panel.h  d_orbital_viewer.cpp  d_orbital_viewer.h  dos_panel.cpp  dos_panel.h  editor_toolbar.cpp  editor_toolbar.h  energy_diagram.cpp  energy_diagram.h  esp_controls.cpp  esp_controls.h  export_dialog.cpp  export_dialog.h  file_dialog.cpp  file_dialog.h  ir_spectrum_panel.cpp  ir_spectrum_panel.h  mo_diagram.cpp  (+45 more)
tests/: test_bond_perception.cpp  test_cli.cpp  test_command_stack.cpp  test_constants.cpp  test_coordination.cpp  test_crystal_field.cpp  test_cube_io.cpp  test_fchk_io.cpp  test_fragment_library.cpp  test_gaussian_eval.cpp  test_gpu_crossval.cpp  test_hydrogen.cpp  test_ligand_library.cpp  test_molden_parser.cpp  test_molecular_system.cpp  test_orbital_composition.cpp  test_pdb_io.cpp  test_pes_integration.cpp  test_picking.cpp  test_project_io.cpp  test_pyscf_integration.cpp  test_python_env.cpp  test_sdf_io.cpp  test_settings.cpp  test_slater.cpp  test_special_functions.cpp  test_spline.cpp  test_symmetry.cpp  test_trajectory_io.cpp  test_update_checker.cpp  test_valence.cpp  test_xyz_io.cpp  test_zmatrix.cpp
tests/data/: h2_sto3g.molden
